--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^4.0.0",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-grid-system": "^7.3.1",
