--- a/portal-front/package.json
+++ b/portal-front/package.json
@@ -21,6 +21,7 @@
     "react-grid-system": "^7.3.1",
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
+    "react-redirect": "^1.0.0",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
