--- a/portal-front/package.json
+++ b/portal-front/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "json-as-xlsx": "^2.3.10",
+    "json-to-csv-export": "^1.0.2",
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
     "react-alice-carousel": "^2.5.1",
@@ -25,7 +27,7 @@
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "xlsx": "^0.17.4"
+    "xlsx": "^0.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
