--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,7 +9,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "json-as-xlsx": "^2.3.10",
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
     "react-alice-carousel": "^2.5.1",
