--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.25.0",
+    "json-as-xlsx": "^2.3.10",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-grid-system": "^8.0.1",
     "react-icons": "^4.3.1",
