--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "gsap": "^3.9.1",
     "json-as-xlsx": "^2.3.10",
+    "powerbi-report-component": "^2.6.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.1.1",
