--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
+    "excel4node": "^1.7.2",
     "gsap": "^3.9.1",
     "json-as-xlsx": "^2.3.10",
     "powerbi-report-component": "^2.6.0",
